kubernetes/networking/apps/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: code-at-customer-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "www.shukawam.com"
        - "api.shukawam.com"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "www.shukawam.com"
        - "api.shukawam.com"
      tls:
        credentialName: code-at-customer-certificate
        mode: SIMPLE
