kubernetes/networking/apps/frontend-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-vs
  namespace: frontend
spec:
  hosts:
    - www.shukawam.com
  gateways:
    - istio-system/code-at-customer-gateway
  http:
    - match:
        - uri:
            exact: /
        - uri:
            prefix: /css
        - uri:
            prefix: /js
        - uri:
            prefix: /favicon.ico
        - uri:
            prefix: /items
      route:
        - destination:
            host: frontend
            port:
              number: 8080
